Fixed overflow on mobile

--- a/styles/index.css
+++ b/styles/index.css
@@ -1,4 +1,4 @@
-body {
+.accordion {
     overflow: hidden;
 }
 
